# NDK-OpenCV-example

./: build.gradle  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: rest_rpc.hpp
app/src/main/cpp/include/rest_rpc/: rpc_server.hpp
app/src/main/java/com/example/nativeopencvandroidtemplate/: MainActivity.java
app/src/main/java/org/restrpc/jni/: restrpc_jni.lib
app/src/main/kotlin/com/example/nativeopencvandroidtemplate/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
